# pathsim-batt

./: README.md  pyproject.toml
.github/workflows/: test.yml
docs/source/examples/: 01_spme_discharge.ipynb  02_electrothermal_coupling.ipynb  03_dfn_cosimulation.ipynb
src/pathsim_batt/: __init__.py
src/pathsim_batt/cells/: __init__.py  pybamm_cell.py
src/pathsim_batt/thermal/: lumped.py
tests/cells/: _helpers.py  test_ecm.py  test_lead_acid.py  test_other_chemistries.py  test_pybamm_cell.py  test_sodium_ion.py
