[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pathsim-batt"
dynamic = ["version"]
description = "Battery Simulation Blocks for PathSim"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PathSim Contributors"}
]
keywords = ["simulation", "battery", "pybamm", "electrochemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pathsim>=0.22",
    # PyBaMM ships native code that can't be installed in Pyodide. The
    # marker resolves to a normal eager install on every real platform and
    # is skipped on Emscripten so the pure-Python parts of the toolbox
    # (`pathsim_batt.thermal`) still install in the browser.
    "pybamm>=25.12; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.urls]
Homepage = "https://pathsim.org"
Documentation = "https://docs.pathsim.org/batt"
Repository = "https://github.com/pathsim/pathsim-batt"
Issues = "https://github.com/pathsim/pathsim-batt/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/pathsim_batt/_version.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
files = ["src/pathsim_batt"]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
